@@ -66,7 +66,7 @@ Bug Tracking System</a>. If possible, please try searching to see if someone
 else has already reported this bug. If you have more or better information,
 feel free to add a note!
 <p>If you just have a question, be sure to read our
-<a href="generated/manpages/man-pages.html">Documentation</a>
+<a href="generated/manpages/">Documentation</a>
 first, then you might want to try our <a href="mailinglist.html">Mailing
 List</a>.
 <p>When asking for help, of course always remember to provide the release
