@@ -8,26 +8,28 @@
 <center>
 <h1><font color="pink">Welcome to the Official FVWM Homepage</font></h1>
 <p>
-<img src="fvwm_smaller.gif" alt="[FVWM]" width=153 height=64 align=left>
+<img src="fvwm_smaller.gif" alt="[FVWM]" width=153 height=64>
 </center>
 
+<p>
 FVWM is an extremely powerful ICCCM-compliant multiple virtual desktop window
 manager for the X Window system.
 <p>
-<font size="+2" font color="yellow">NEWS FLASH! </font>
+<font size="+2" color="yellow">NEWS FLASH!</font>
 FVWM 2.4.0, an official release, is now available for
-<a href="download.html">download!</a>
-<!--FVWM 2.3.33, a stable candidate release is now available for download!-->
+<a href="download.html">download</a>.
 
-<!-- <blockquote> -->
-<!-- <table border=0 cellpadding=0 cellspacing=0> -->
-<!--   <tr><td>Latest Stable Release: &nbsp;<td><b>2.4.0</b></tr> -->
-<!--   <tr><td>Latest Beta Release:   &nbsp;<td><b>none</b></tr> -->
-<!-- </table> -->
-<!-- </blockquote> -->
+<!--
+<hr>
+<blockquote>
+<table border=0 cellpadding=0 cellspacing=0>
+  <tr><td>Latest Stable Release: &nbsp;<td><b>2.4.0</b></tr>
+  <tr><td>Latest Beta Release:   &nbsp;<td><b>none</b></tr>
+</table>
+</blockquote>
+-->
 
-<!-- <p><hr> -->
-
+<hr>
 <h2 align=center>Site Content</h2>
 
 <table border=0 cellpadding=0 cellspacing=0 width="100%"><tr>
@@ -45,17 +47,24 @@ FVWM 2.4.0, an official release, is now available for
   <li><a href="icons.html">Icons and Sounds Download</a>
   <li><a href="mailinglist.html">Mailing List Info</a>
   - <a href="http://www.hpc.uh.edu/fvwm/archive">Archive</a>
-  <!--li><a href="http://www.hpc.uh.edu/fvwm/archive">Mailing List Archive</a-->
   <li><a href="http://www.fvwm.org/cgi-bin/fvwm-bug">FVWM Bug Reporting</a>
   <li><a href="developers.html">Developer Info (CVS, Modules)</a>
-<!--  <li><a href="acknowledgements.html">Acknowledgements</a> -->
   <li><a href="generated/AUTHORS.html">Acknowledgements</a>
   <li><a href="fvwm-cats/">Other Important Info ^_^</a>
 </ul>
 </tr></table>
 
 <hr>
-Created: Jan 31, 1996
-Last modified: July 17, 2001
+<center>
+Created: Jan 31, 1996;
+Last modified: July 25, 2001.
+</center>
+
+<!--
+  Please don't modify the rest of the page. Reserved for mirrors.
+-->
+<!--
+  This is the original source. Mirrors should replace this comment.
+-->
 </body>
 </html>
