@@ -1,3 +1,10 @@
+2001-07-25  Mikhael Goikhman  <migo@homemail.com>
+
+	* index.html:
+	restored image-in-center layout, some html clean-up
+	* download.html:
+	fixed link to manpages
+
 2001-07-22  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* mod_f2m_communication.html:
